# Programacion-C-Clase3

ejemplos/1/: coche.c  concesionario.c  main
ejemplos/3/: main
ejemplos/4/: main
ejemplos/5/: fopclo
ejemplos/6/: fgetc  fgetc.c
ejemplos/7/: fgets  fgets.c
ejemplos/8/: freadwrite  freadwrite.c
ejemplos/9/: fprintf  fprintf.c
ejercicios/1/: configure.ac
ejercicios/1/src/: Makefile.am  gestor_tarea.c  gestor_tarea.h  main.c  tarea.c  tarea.h
ejercicios/2/src/: main.c
ejercicios/3/: configure.ac  main.c
ejercicios/3/src/: Makefile.am  concesionario.c
